Atualizando dependencias de adSense

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Kalffman.github.io/calculadora-react",
+  "homepage": "http://kalffman.github.io/calculadora-react/",
   "name": "calculadora-react",
   "version": "0.1.0",
   "private": true,
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
+    "react-adsense": "^0.1.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
